--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,23 +9,23 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Install Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.9'
 
     - name: Install Dependencies
       run: |
-        pip install -r requirements.txt
+        pip install pandas openpyxl pyinstaller
 
     - name: Bikin Jadi EXE (PyInstaller)
       run: |
         pyinstaller --noconsole --onefile --windowed --name "SuratBNI_App" SuratBNI.py
 
     - name: Upload Hasilnya
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: Aplikasi-Surat-Windows
         path: dist/SuratBNI_App.exe
