--- a/.github/workflows/build_aplikasi.yml
+++ b/.github/workflows/build_aplikasi.yml
@@ -1,39 +1,35 @@
 name: Build Aplikasi Otomatis
 
-# Robot akan bekerja setiap kali kamu push kode baru ke branch 'main'
 on:
   push:
     branches: [ "main" ]
-  workflow_dispatch: # Supaya tombol "Run workflow" muncul manual
+  workflow_dispatch:
 
 jobs:
   build-windows:
-    runs-on: windows-latest # Kita pinjam komputer Windows milik GitHub
+    runs-on: windows-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4 # Update ke v4 (terbaru)
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5 # Update ke v5 (terbaru)
       with:
-        python-version: '3.9' # Menggunakan Python versi stabil
+        python-version: '3.11' # Gunakan versi Python yang lebih modern
         
     - name: Install Library
       run: |
         python -m pip install --upgrade pip
-        # openpyxl wajib ada untuk membaca Excel (.xlsx)
-        # Pillow wajib ada untuk memuat gambar/logo
         pip install pandas openpyxl Pillow pyinstaller
         
     - name: Mulai Membuat EXE (Build)
       run: |
-        # PERBAIKAN PENTING:
-        # Kita tambahkan "CVMS/" karena file python kamu ada di dalam folder CVMS
-        # Jika belum ada file icon di repo, kita hapus dulu bagian --icon agar tidak error
+        # PERBAIKAN PENTING 1: Menambahkan folder "CVMS/" sebelum nama file
         pyinstaller --onefile --noconsole --name "AplikasiSuratBNI" CVMS/AplikasiSuratBNI.py
         
     - name: Upload Hasil Jadi
-      uses: actions/upload-artifact@v3
+      # PERBAIKAN PENTING 2: Mengganti v3 menjadi v4 (Solusi error screenshotmu)
+      uses: actions/upload-artifact@v4
       with:
         name: AplikasiSuratBNI-Windows
         path: dist/AplikasiSuratBNI.exe
